force-app/main/default/objects/Investigation_Step__e/Investigation_Step__e.object-meta.xml
<CustomObject>
    <label>Investigation Step</label>
    <pluralLabel>Investigation Steps</pluralLabel>
</CustomObject>