force-app/main/default/objects/Investigation_Step__e/fields/Investigation_Id__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Id__c</fullName>
    <label>Investigation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>