force-app/main/default/objects/Investigation_Step__e/fields/Step_Type__c.field-meta.xml
<CustomField>
    <fullName>Step_Type__c</fullName>
    <label>Step Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>